syntax = "proto3";

package io.harness.event.payloads;

option java_multiple_files = true;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message Usage {
  int64 cpu_nano = 1;
  int64 memory_byte = 2;
}

message NodeMetric {
  string cloud_provider_id = 1;
  string name = 2;
  google.protobuf.Timestamp timestamp = 3;
  google.protobuf.Duration window = 4;
  Usage usage = 5;
  string cluster_id = 6;
}

message PodMetric {
  string cloud_provider_id = 1;
  string name = 2;
  string namespace = 3;
  google.protobuf.Timestamp timestamp = 4;
  google.protobuf.Duration window = 5;
  repeated Container containers = 6;
  message Container {
    string name = 1;
    Usage usage = 2;
  }
  string cluster_id = 7;
}
